--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,6 +189,9 @@
   height: 85px;
   font-size: 17px !important;
 }
+.mukta {
+  font-family: Mukta-Regular, sans-serif;
+}
 .prev-btn {
     // min-width: 140px;
     border-radius: 25px;
