normalisation de la row avec les rectangles

--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -7,10 +7,11 @@
   padding-right: 7%;
 }
 
+
+
 .ec-bigbox-detail {
   padding-left: 7%;
-  max-height: 600px;
-  // padding-right: 7%;
+  max-height: 700px;  // padding-right: 7%;
 }
 .neon-detail-config {
   padding: 0 !important;
@@ -39,6 +40,7 @@
 
 .ec-bottom-row {
   margin-top: 5%;
+  padding-left: 7%;
   //padding-right: 7%;
 }
 .ec-bottom-row-blue {
