--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -33,13 +33,14 @@
                       <option value="Consumer">Consumer</option>
                       <option value="Business">Business</option>
                       <option disabled>------------------------</option>
-                      <option value="Billie">Billie</option>
-                      <option value="Cobby">Cobby</option>
-                      <option value="Jackie">Jackie</option>
-                      <option value="Jerry">Jerry</option>
+                      <option value="Lilly">Lilly</option>
+                      <option value="Dannie">Dannie</option>
+                      <option value="Billy">Billy</option>
+                      <option value="Polly">Polly</option>
                       <option value="Jimmy">Jimmy</option>
-                      <option value="Johnny">Johnny</option>
-                      <option value="Perrie">Perrie</option>
+                      <option value="Cobby">Cobby</option>
+                      <option value="Tommy">Tommy</option>
+                      <option value="Freddy">Freddy</option>
 
                     </select>
                   </div>
