--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -342,6 +342,15 @@ td:before {
   background-size: contain;
 }
 
+.card-logo-note {
+  width: inherit;
+  height: 35px;
+  margin-bottom: 5%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
 .ec-title {
         font-family: Nunito-Black, sans-serif;
   color: #000b31;
