--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -11,7 +11,11 @@
   font-family: Nunito-Black;
   src:  url('../.././assets/fonts/Nunito-Black.ttf')  format('truetype');
 }
-
+.testShadow {
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
+}
+.testShadow2 {
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #B6FF00, 0 0 35px #B6FF00, 0 0 40px #B6FF00, 0 0 50px #B6FF00, 0 0 75px #B6FF00;}
 .hidden {
   display: none !important;
 }
@@ -248,38 +252,49 @@ button:disabled {
   pointer-events: all !important;
 }
   .blancFroid {
-    color: #ffffff !important;
+    
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 35px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 75px #fff;
   }
   .blanchaud {
-    color: #ede3c5 !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ede3c5, 0 0 35px #ede3c5, 0 0 40px #ede3c5, 0 0 50px #ede3c5, 0 0 75px #ede3c5;
+
   }
   .orange {
-    color: #ffa42c !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffa42c, 0 0 35px #ffa42c, 0 0 40px #ffa42c, 0 0 50px #ffa42c, 0 0 75px #ffa42c;
+
   }
   .jaune {
-    color: #ffe600 !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffe600, 0 0 35px #ffe600, 0 0 40px #ffe600, 0 0 50px #ffe600, 0 0 75px #ffe600;
+
   }
   .rouge {
-    color: #ff0000 !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff0000, 0 0 35px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 75px #ff0000;
+
   }
   .rose {
-    color: #ff73ff !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff73ff, 0 0 35px #ff73ff, 0 0 40px #ff73ff, 0 0 50px #ff73ff, 0 0 75px #ff73ff;
+
   }
   .fuschia {
-    color: #df29ff !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #df29ff, 0 0 35px #df29ff, 0 0 40px #df29ff, 0 0 50px #df29ff, 0 0 75px #df29ff;
+
   }
   .violet {
-    color: #9527ff !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #9527ff, 0 0 35px #9527ff, 0 0 40px #9527ff, 0 0 50px #9527ff, 0 0 75px #9527ff;
+
   }
 
   .bleu {
-    color: #337dff !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #337dff, 0 0 35px #337dff, 0 0 40px #337dff, 0 0 50px #337dff, 0 0 75px #337dff;
+
   }
   .vert {
-    color: #15e81f !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #15e81f, 0 0 35px #15e81f, 0 0 40px #15e81f, 0 0 50px #15e81f, 0 0 75px #15e81f;
+
   }
   .turquoise {
-    color: #17fff9 !important;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #17fff9, 0 0 35px #17fff9, 0 0 40px #17fff9, 0 0 50px #17fff9, 0 0 75px #17fff9;
+
   }
 
 
@@ -588,7 +603,7 @@ background-color: #000B31;
 .dynamicNeonTitle {
 align-self: center;
 text-align: center;
-  border-radius: 50px;
+  // border-radius: 50px;
   width: 52%;
   margin-right: 15px;
   outline: none !important;
@@ -597,6 +612,8 @@ display: flex;
 border: none;
   padding-left: 5%;
   padding-right: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   background-color: rgba(0, 11, 49, 0.70);
   color: white;
 }
@@ -1222,13 +1239,13 @@ float: left;
 
 
 .fs-medium {
-  font-size: 3vw !important;
+  font-size: 4vw !important;
 }
 
 .fs-small {
-  font-size: 2vw !important;
+  font-size: 2.5vw !important;
 }
 
 .fs-very-small {
-  font-size: 1.4vw !important;
+  font-size: 2vw !important;
 }
